access: add condition `kontingent=1` for showing quota lists

--- a/configuration/access.cfg
+++ b/configuration/access.cfg
@@ -18,3 +18,5 @@
 [qualification_quota_edit]
 description = "edit and copy quotas from same tournament series, last year"
 group = admin
+condition = kontingent
+condition_queries_module = tournaments
