--- a/configuration/access.cfg
+++ b/configuration/access.cfg
@@ -15,6 +15,12 @@
 ; - Field "group": default group name who hasthis right
 ;
 
+[qualification_quotacalc_dem]
+description = "overview of quota for the DEM single tournament per federation"
+group = public
+condition = quotadem
+condition_queries_module = tournaments
+
 [qualification_quota_edit]
 description = "edit and copy quotas from same tournament series, last year"
 group = admin
