quotacalcdvm: remove parameter check; switch to `quotadvm=1`; add public access rights and condition query

--- a/configuration/access.cfg
+++ b/configuration/access.cfg
@@ -15,6 +15,12 @@
 ; - Field "group": default group name who hasthis right
 ;
 
+[qualification_quotacalc_dvm]
+description = "overview of quota for the DVM team tournament with regional groups"
+group = public
+condition = quota
+condition_query = quotacalc_dvm
+
 [qualification_quotacalc_dem]
 description = "overview of quota for the DEM single tournament per federation"
 group = public
