regionalgruppen: link from quotacalcdvm for all users to regionalgruppen via access + setting path, add group that can edit groups

--- a/configuration/access.cfg
+++ b/configuration/access.cfg
@@ -32,3 +32,11 @@ description = "edit and copy quotas from same tournament series, last year"
 group = admin
 condition = kontingent
 condition_queries_module = tournaments
+
+[qualification_regional_groups]
+description = "list of regional groups for DVM"
+group = public
+
+[qualification_regional_groups_edit]
+description = "edit list of regional groups for DVM"
+group = admin
