forms kontingente: change view rights to `qualification_quota_view`, if `qualification_quota_edit`, allow editing

--- a/configuration/access.cfg
+++ b/configuration/access.cfg
@@ -27,6 +27,12 @@ group = public
 condition = quotadem
 condition_queries_module = tournaments
 
+[qualification_quota_view]
+description = "view assigned quotas for tournaments"
+group = public
+condition = kontingent
+condition_queries_module = tournaments
+
 [qualification_quota_edit]
 description = "edit and copy quotas from same tournament series, last year"
 group = admin
