access: add `page_placeholder_check` where useful

--- a/configuration/access.cfg
+++ b/configuration/access.cfg
@@ -20,12 +20,14 @@ description = "overview of quota for the DVM team tournament with regional group
 group = public
 condition = quota
 condition_query = quotacalc_dvm
+page_placeholder_check = 1
 
 [qualification_quotacalc_dem]
 description = "overview of quota for the DEM single tournament per federation"
 group = public
 condition = quotadem
 condition_queries_module = tournaments
+page_placeholder_check = 1
 
 [qualification_quota_view]
 description = "view assigned quotas for tournaments"
@@ -38,6 +40,7 @@ description = "edit and copy quotas from same tournament series, last year"
 group = admin
 condition = kontingent
 condition_queries_module = tournaments
+page_placeholder_check = 1
 
 [qualification_regional_groups]
 description = "list of regional groups for DVM"
