access: add `qualification_registration_overview`

--- a/configuration/access.cfg
+++ b/configuration/access.cfg
@@ -49,3 +49,10 @@ group = public
 [qualification_regional_groups_edit]
 description = "edit list of regional groups for DVM"
 group = admin
+
+[qualification_registration_overview]
+description = "view overview of registration per federation and per single tournament of tournament series"
+group = admin
+condition[] = kontingent
+condition[] = series
+condition_queries_module = tournaments
