settings: add settings for configuration.parameters for series

--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -20,3 +20,44 @@
 [qualification_regional_groups_path]
 description = "list of regional groups for DVM"
 brick = tables regionalgruppen
+
+[alternate]
+description = "series identifier of alternative tournament (split of open and female tournaments)"
+type = path
+scope = [series]
+
+[distribution]
+description = "distribution of places"
+list = 1
+type = int
+scope = [series]
+
+[kontingent]
+description = "assign quotas for federations to tournament"
+type = bool
+scope = [series]
+
+[lvmeldung]
+description = "allow federations to register players for this tournament series"
+type = bool
+scope = [series]
+
+[quotadem]
+description = "calculate quota for DEM tournaments"
+type = bool
+scope = [series]
+
+[quotadvm]
+description = "calculate quota for DVM tournaments"
+type = bool
+scope = [series]
+
+[younger]
+description = "series identifier of next younger tournament"
+type = path
+scope = [series]
+
+[younger_alternate]
+description = "series identifier of next younger tournament if there is an alternative (split of open and female tournaments)"
+type = path
+scope = [series]
