access: add condition `regional_group=1` for `qualification_regional_groups`

--- a/configuration/access.cfg
+++ b/configuration/access.cfg
@@ -45,6 +45,8 @@ page_placeholder_check = 1
 [qualification_regional_groups]
 description = "list of regional groups for DVM"
 group = public
+condition = regional_groups
+condition_queries_module = activities
 
 [qualification_regional_groups_edit]
 description = "edit list of regional groups for DVM"
