quota form: link to main series path to copy quota (if available)

--- a/configuration/access.cfg
+++ b/configuration/access.cfg
@@ -35,6 +35,11 @@ group = public
 condition = kontingent
 condition_queries_module = tournaments
 
+[qualification_quota_copy]
+description = "copy quota from a past tournament"
+page_placeholder_check = 1
+include_access[] = qualification_quota_edit
+
 [qualification_quota_edit]
 description = "edit and copy quotas from same tournament series, last year"
 group = admin
