--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -21,6 +21,10 @@
 description = "list of regional groups for DVM"
 brick = tables regionalgruppen
 
+[qualification_quota_copy_path]
+description = "copy quota from a past tournament"
+brick = request kontingente_kopieren *
+
 [alternate]
 description = "series identifier of alternative tournament (split of open and female tournaments)"
 type = path
