settings: fix `qualification_quota_copy_path`

--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -23,7 +23,7 @@ brick = tables regionalgruppen
 
 [qualification_quota_copy_path]
 description = "copy quota from a past tournament"
-brick = request kontingente_kopieren *
+brick = make kontingente_kopieren *
 
 [alternate]
 description = "series identifier of alternative tournament (split of open and female tournaments)"
