settings: use standard way to write arrays with scope[] =, not scope = […, …]

--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -5,7 +5,7 @@
 ; https://www.zugzwang.org/modules/qualification
 ;
 ; @author Gustaf Mossakowski <gustaf@koenige.org>
-; @copyright Copyright © 2021–2023 Gustaf Mossakowski
+; @copyright Copyright © 2021–2023, 2026 Gustaf Mossakowski
 ; @license http://opensource.org/licenses/lgpl-3.0.html LGPL-3.0
 ;
 ; Syntax of this configuration file:
@@ -28,40 +28,40 @@ brick = make kontingente_kopieren *
 [alternate]
 description = "series identifier of alternative tournament (split of open and female tournaments)"
 type = path
-scope = [series]
+scope[] = series
 
 [distribution]
 description = "distribution of places"
 list = 1
 type = int
-scope = [series]
+scope[] = series
 
 [kontingent]
 description = "assign quotas for federations to tournament"
 type = bool
-scope = [series]
+scope[] = series
 
 [lvmeldung]
 description = "allow federations to register players for this tournament series"
 type = bool
-scope = [series]
+scope[] = series
 
 [quotadem]
 description = "calculate quota for DEM tournaments"
 type = bool
-scope = [series]
+scope[] = series
 
 [quotadvm]
 description = "calculate quota for DVM tournaments"
 type = bool
-scope = [series]
+scope[] = series
 
 [younger]
 description = "series identifier of next younger tournament"
 type = path
-scope = [series]
+scope[] = series
 
 [younger_alternate]
 description = "series identifier of next younger tournament if there is an alternative (split of open and female tournaments)"
 type = path
-scope = [series]
+scope[] = series
